@@ -50,6 +50,7 @@
 
 #include "diagnostics/assert.h"
 #include "diagnostics/util_macros.h"
+#include <zorba/external_function_parameter.h>
 
 using namespace std;
 
@@ -143,6 +144,15 @@ dynamic_context::dynamic_context(dynamic_context* parent)
 ********************************************************************************/
 dynamic_context::~dynamic_context()
 {
+  for (uint32_t i = 0; i < keymap.size(); ++i)
+  {
+    dctx_value_t lValue = keymap.getentryVal(i);
+    if (lValue.type == dctx_value_t::ext_func_param_typed)
+    {
+      static_cast<ExternalFunctionParameter*>(lValue.func_param)->destroy();
+    }
+  }
+
   if (theAvailableIndices)
     delete theAvailableIndices;
 }
@@ -584,11 +594,55 @@ bool dynamic_context::getExternalFunctionParam (
       return false;
   }
 
-  ZORBA_ASSERT(val.type == dynamic_context::dctx_value_t::ext_func_param);
-  aValue = val.func_param;
-  return true;
+  if (val.type == dynamic_context::dctx_value_t::ext_func_param)
+  {
+    aValue = val.func_param;
+    return true;
+  }
+  else
+  {
+    // could also be of type ext_func_param_typed
+    return false;
+  }
 }
 
+
+/*******************************************************************************
+
+********************************************************************************/
+bool dynamic_context::addExternalFunctionParameter(
+   const std::string& aName,
+   ExternalFunctionParameter* aValue)
+{
+  dctx_value_t val;
+  val.type = dynamic_context::dctx_value_t::ext_func_param_typed;
+  val.func_param = aValue;
+
+  return keymap.put ( aName, val);
+}
+
+
+/*******************************************************************************
+
+********************************************************************************/
+ExternalFunctionParameter*
+dynamic_context::getExternalFunctionParameter(const std::string& aName) const
+{
+  dctx_value_t val;
+  val.type = dynamic_context::dctx_value_t::no_val;
+  val.func_param = 0;
+
+  if ( !keymap.get(aName, val) ) {
+    if (theParent)
+      return theParent->getExternalFunctionParameter(aName);
+    else
+      return 0;
+  }
+
+  ExternalFunctionParameter* lRes
+    = static_cast<ExternalFunctionParameter*>(val.func_param);
+  return lRes;
+}
 
 /*
 std::vector<zstring>* dynamic_context::get_all_keymap_keys() const
